--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,15 @@
 
     <dependencyManagement>
         <dependencies>
+
+
+            <dependency>
+                <groupId>org.example</groupId>
+                <artifactId>dh_extension</artifactId>
+                <version>1.0-SNAPSHOT</version>
+<!--                <scope>system</scope>-->
+<!--                <systemPath>${project.basedir}/lib/dh_extension-1.0.jar</systemPath>-->
+            </dependency>
             <dependency>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-dependencies</artifactId>
